--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
     </string>
     <string name="title_activity_list_activir">ListActivir</string>
     <string name="title_activity_get_date">GetDateActivity</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
